--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Tectium</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Inicio</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Notificaciones</string>
     <string name="user">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="log">Iniciar sesión</string>
@@ -12,7 +12,7 @@
     <string name="facebook_app_id">1720065391618313</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hola fragmento blanco</string>
     <string name="add">Añadir</string>
     <string name="new_event">Crear evento</string>
     <string name="social">Social</string>
